Make tests in sdk-embed runnable.